# lxde-common

./: .gitignore  AUTHORS  COPYING  ChangeLog  LXDE.desktop.in  LXDE.desktop.in.in  Makefile.am  README  autogen.sh  autostart  config  config.h.in  configure.ac  default  default.in  gtkrc-2.0  lxde-logout.desktop.in  lxde-logout.in  lxde-screenlock.desktop.in  openbox-lxde.in  startlxde.in
debian/: NEWS  README.Debian  changelog  control  copyright  lxde-logout.desktop  lxde-screenlock.desktop  postinst  prerm  rules  watch
debian/patches/: 00list  01_default-config.dpatch  02_lxsession_0.4.1.dpatch  03_menu-xdg.dpatch
icon-theme/: AUTHORS  Makefile.am  prevent-dup.py
icon-theme/nuoveXT2/: dups  index.theme
lxde-settings/: Makefile.am  config  lxde-settings.c
lxpanel/: config.in  panel.in
man/: Makefile.am  lxde-logout.1  lxde-settings-daemon.sgml  lxde-settings.sgml  openbox-lxde.1  openbox-lxde.sgml  openbox-lxde.xml  startlxde.1
openbox/: menu.xml  rc.xml.in
pcmanfm/: main.lxde.in  pcmanfm.conf.in
po/: POTFILES.in  POTFILES.skip  ar.po  bg.po  cs.po  de.po  es.po  fi.po  fr.po  gl.po  he.po  is.po  ja.po  kk.po  lg.po  lt.po  lxde-common.pot  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
themes/: gtkrc
